--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "name": "ArticlesJoey"
   },
   "homepage": "https://games.articles.media",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": false,
   "scripts": {
-    "dev": "next dev -p 3048",
+    "dev": "next dev --webpack -p 3048",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3048",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,30 +20,30 @@
     "@mui/material": "^7.3.6",
     "@mui/material-nextjs": "^7.3.6",
     "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^10.5.0",
-    "@react-three/fiber": "^9.2.0",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
-    "next": "^16",
+    "next": "^16.1.0",
     "peerjs": "^1.5.5",
     "qrcode.react": "^4.2.0",
-    "react": "^19",
+    "react": "^19.2.3",
     "react-bootstrap": "^2.10.10",
     "react-color": "^2.19.3",
     "react-countdown": "^2.3.6",
-    "react-dom": "^19",
+    "react-dom": "^19.2.3",
     "react-hotkeys-hook": "^5.2.1",
     "sass": "^1.94.2",
     "socket.io-client": "^4.8.1",
-    "swr": "^2.3.7",
-    "three": "^0.178.0"
+    "swr": "^2.3.8",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "^16"
+    "eslint-config-next": "^16.1.0"
   }
 }
