--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "private": false,
   "scripts": {
     "dev": "next dev --webpack -p 3048",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start -p 3048",
     "lint": "next lint"
   },
   "dependencies": {
+    "@articles-media/articles-dev-box": "^1.0.11",
+    "@articles-media/articles-gamepad-helper": "^0.0.2",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
@@ -26,7 +28,7 @@
     "bootstrap": "^5.3.8",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
-    "next": "^16.1.0",
+    "next": "^16.1.2",
     "peerjs": "^1.5.5",
     "qrcode.react": "^4.2.0",
     "react": "^19.2.3",
@@ -44,6 +46,6 @@
     "@eslint/eslintrc": "^3",
     "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9",
-    "eslint-config-next": "^16.1.0"
+    "eslint-config-next": "^15.5.9"
   }
 }
